# App

./: .env.example  .gitignore  .mcp.json  AUDIT.md  CLAUDE.md  README.md  SETUP.md  capacitor.config.ts  eslint.config.cjs  jest.config.js  next.config.js  package-lock.json  package.json  pyproject.toml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json
alpha/: __init__.py  cli.py  config.py
config/: activists.yaml  settings.yaml  universe.yaml
data/: historical_activist_campaigns.csv  historical_spinoffs.csv
docs/: ROADMAP.md  design-system.md
public/: manifest.json  sw.js
scripts/: analyze_size_filter.py  backtest_activists.py  backtest_concentration.py  backtest_microcap.py  backtest_realtime.py  backtest_spinoffs.py  backtest_with_filter.py  backtest_with_llm.py  check_llm_calls.py  daily_run.py  llm_backfill.py  post-cap-sync.mjs  pr-review.mjs  resize-logo.mjs  resize-logo.py  run_llm_validation.sh  seed-demo.ts  seed-rhythm-buyer.ts  walk_forward.py
src/: instrumentation.ts  middleware.ts
supabase/: INSTALL-CATALOG.md  config.toml  full-catalog-install.sql  full-catalog-products.sql  seed-all-real-catalog.sql  seed-extra.sql  seed-real-catalog-2.sql  seed-real-catalog-3.sql  seed-real-catalog-4.sql  seed-real-catalog-5.sql  seed-real-catalog.sql  seed-zones-extra.sql  seed.sql  setup.sql
tests/: build-packs.test.ts  cart-store.test.ts  catalog-search.test.ts  cron-auth.test.ts  cutoff.test.ts  delivery-date.test.ts  iif-export.test.ts  impersonation-token.test.ts  lists-route-validation.test.ts  (+13 more)
(+491 files in other folders)
